# pod-runtime-class-policy

./: .gitignore  Cargo.toml  Makefile  Package.resolved  Package.swift  README.md  artifacthub-pkg.yml  artifacthub-repo.yml  e2e.bats  hub.yml  metadata.yml
.github/workflows/: cd.yml  ci.yml  release.yml  test.yml  tests.yml
Sources/BusinessLogic/: settings.swift  validate.swift
Sources/CLI/: main.swift
Sources/Policy/: config.swift  main.swift  validate.swift
Tests/: LinuxMain.swift
Tests/BusinessLogicTests/: validateTests.swift
Tests/BusinessLogicTests/ValidateJSONData/: NotAPodRequest.swift  PodDeleteRequest.swift  PodRequestWithRuncRuntime.swift  PodRequestWithoutRuntime.swift
Tests/Examples/: PodRequestWithRuncRuntime.json
Tests/PolicyTests/: XCTestManifests.swift  validateTests.swift
Tests/PolicyTests/ValidateJSONData/: PodRequestWithKataRuntime.swift
src/: lib.rs  settings.rs
test_data/: PodDeleteRequest.json
