[package]
name = "pod-runtime-class-policy"
version = "0.2.2"
authors = ["José Guilherme Vanz <jguilhermevanz@suse.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
k8s-openapi = { version = "0.20.0", features = ["v1_26"] }
kubewarden-policy-sdk = "0.9.8"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
rstest = "0.18"
